[project]
name = "rag-exper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "ipython>=8.31.0",
    "langchain-community>=0.3.16",
    "langchain-groq>=0.2.4",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.5",
    "langchain>=0.3.16",
    "llama-index>=0.12.14",
    "llmsherpa>=0.1.4",
    "locust>=2.32.8",
    "pypdf>=5.2.0",
    "python-dotenv>=1.0.1",
    "opentelemetry-distro[otlp]>=0.50b0",
    "prometheus-fastapi-instrumentator>=7.0.2",
    "langchain-openai>=0.3.3",
    "langchain-google-vertexai>=2.0.13",
    "vertexai>=1.43.0",
    "llama-index-core>=0.12.14",
    "llama-parse>=0.5.20",
    "llama-index-readers-file>=0.4.4",
]
